tests/it/wire/snapshots/it__wire__openai_responses__a_mid_stream_error_terminates_without_completing.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "type": "started",
    "id": "resp_failed"
  },
  {
    "type": "content_block_start",
    "id": "msg_failed",
    "kind": {
      "type": "text"
    }
  },
  {
    "type": "text_delta",
    "id": "msg_failed",
    "text": "Part"
  },
  {
    "type": "error",
    "error": {
      "kind": "server",
      "message": "provider openai the model stream failed",
      "provider": "openai",
      "provider_code": "server_error",
      "retry": {
        "type": "safe"
      },
      "raw_data": {
        "type": "error",
        "code": "server_error",
        "message": "the model stream failed",
        "param": null,
        "sequence_number": 4
      }
    }
  }
]
