tests/it/wire/snapshots/it__wire__openai_responses__a_truncated_stream_completes_as_incomplete.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "type": "started",
    "id": "resp_cut"
  },
  {
    "type": "content_block_start",
    "id": "msg_cut",
    "kind": {
      "type": "text"
    }
  },
  {
    "type": "text_delta",
    "id": "msg_cut",
    "text": "Half a sen"
  },
  {
    "type": "content_block_end",
    "id": "msg_cut",
    "part": {
      "type": "text",
      "text": "Half a sen"
    }
  },
  {
    "type": "content_block_start",
    "id": "msg_cut-item",
    "kind": {
      "type": "opaque",
      "kind": "openai.message"
    }
  },
  {
    "type": "content_block_end",
    "id": "msg_cut-item",
    "part": {
      "type": "opaque",
      "kind": "openai.message",
      "data": {
        "type": "message",
        "id": "msg_cut",
        "role": "assistant",
        "content": [
          {
            "type": "output_text",
            "text": "Half a sen"
          }
        ]
      }
    }
  },
  {
    "type": "completed",
    "response": {
      "id": "resp_cut",
      "model": {
        "provider": "openai",
        "model": "gpt-5.6-luna"
      },
      "content": [
        {
          "type": "text",
          "text": "Half a sen"
        },
        {
          "type": "opaque",
          "kind": "openai.message",
          "data": {
            "type": "message",
            "id": "msg_cut",
            "role": "assistant",
            "content": [
              {
                "type": "output_text",
                "text": "Half a sen"
              }
            ]
          }
        }
      ],
      "finish_reason": "incomplete",
      "usage": {
        "input": 0,
        "output": 0,
        "reasoning": 0,
        "cache_read": 0,
        "cache_write": 0
      }
    }
  }
]
