tests/it/wire/snapshots/it__wire__openai_responses__an_incomplete_response_decodes_as_length.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "content": [
    {
      "text": "Hello there.",
      "type": "text"
    },
    {
      "data": {
        "content": [
          {
            "annotations": [],
            "text": "Hello there.",
            "type": "output_text"
          }
        ],
        "id": "msg_text",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      },
      "kind": "openai.message",
      "type": "opaque"
    }
  ],
  "finish_reason": "length",
  "id": "resp_text",
  "model": {
    "model": "gpt-5.6-luna",
    "provider": "openai"
  },
  "raw": {
    "created_at": 1772000000,
    "id": "resp_text",
    "incomplete_details": {
      "reason": "max_output_tokens"
    },
    "model": "gpt-5.6-luna-2026-04-01",
    "object": "response",
    "output": [
      {
        "content": [
          {
            "annotations": [],
            "text": "Hello there.",
            "type": "output_text"
          }
        ],
        "id": "msg_text",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      }
    ],
    "status": "incomplete",
    "usage": {
      "input_tokens": 12,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 4,
      "output_tokens_details": {
        "reasoning_tokens": 0
      },
      "total_tokens": 16
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 12,
    "output": 4,
    "reasoning": 0
  }
}
