tests/it/wire/snapshots/it__wire__openai_responses__classifies_http_failures.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "case": "unauthorized",
    "error": {
      "kind": "authentication",
      "message": "provider openai Incorrect API key provided.",
      "provider": "openai",
      "provider_code": "invalid_api_key",
      "raw_data": {
        "error": {
          "code": "invalid_api_key",
          "message": "Incorrect API key provided.",
          "type": "invalid_request_error"
        }
      },
      "retry": {
        "type": "never"
      },
      "status": 401
    }
  },
  {
    "case": "access_denied",
    "error": {
      "kind": "access_denied",
      "message": "provider openai Country, region, or territory not supported.",
      "provider": "openai",
      "provider_code": "unsupported_country_region_territory",
      "raw_data": {
        "error": {
          "code": "unsupported_country_region_territory",
          "message": "Country, region, or territory not supported.",
          "type": "request_forbidden"
        }
      },
      "retry": {
        "type": "never"
      },
      "status": 403
    }
  },
  {
    "case": "model_not_found",
    "error": {
      "kind": "not_found",
      "message": "provider openai The model `gpt-nonexistent` does not exist.",
      "provider": "openai",
      "provider_code": "model_not_found",
      "raw_data": {
        "error": {
          "code": "model_not_found",
          "message": "The model `gpt-nonexistent` does not exist.",
          "type": "invalid_request_error"
        }
      },
      "retry": {
        "type": "never"
      },
      "status": 404
    }
  },
  {
    "case": "rate_limited_with_retry_after",
    "error": {
      "kind": "rate_limit",
      "message": "provider openai Rate limit reached for requests.",
      "provider": "openai",
      "provider_code": "rate_limit_exceeded",
      "provider_retry_after_millis": 30000,
      "raw_data": {
        "error": {
          "code": "rate_limit_exceeded",
          "message": "Rate limit reached for requests.",
          "type": "requests"
        }
      },
      "retry": {
        "after_millis": 30000,
        "type": "after"
      },
      "status": 429
    }
  },
  {
    "case": "insufficient_quota",
    "error": {
      "kind": "quota_exceeded",
      "message": "provider openai You exceeded your current quota, please check your plan.",
      "provider": "openai",
      "provider_code": "insufficient_quota",
      "raw_data": {
        "error": {
          "code": "insufficient_quota",
          "message": "You exceeded your current quota, please check your plan.",
          "type": "insufficient_quota"
        }
      },
      "retry": {
        "type": "never"
      },
      "status": 429
    }
  },
  {
    "case": "server_error",
    "error": {
      "kind": "server",
      "message": "provider openai The server had an error processing your request.",
      "provider": "openai",
      "provider_code": "server_error",
      "raw_data": {
        "error": {
          "code": null,
          "message": "The server had an error processing your request.",
          "type": "server_error"
        }
      },
      "retry": {
        "type": "safe"
      },
      "status": 500
    }
  }
]
