tests/it/wire/snapshots/it__wire__openai_responses__codex_mode_assembles_a_tool_call_from_an_empty_terminal_document-2.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "content": [
    {
      "arguments": {
        "city": "Paris"
      },
      "id": "call_1",
      "kind": "function",
      "name": "get_weather",
      "provider_metadata": {
        "openai": {
          "item_id": "fc_1"
        }
      },
      "raw_arguments": "{\"city\":\"Paris\"}",
      "type": "tool_call"
    }
  ],
  "finish_reason": "tool_call",
  "id": "resp_codex",
  "model": {
    "model": "gpt-5.6-luna",
    "provider": "openai"
  },
  "raw": {
    "id": "resp_codex",
    "output": [],
    "status": "completed",
    "usage": {
      "input_tokens": 40,
      "input_tokens_details": {
        "cache_write_tokens": 0,
        "cached_tokens": 0
      },
      "output_tokens": 12,
      "output_tokens_details": {
        "reasoning_tokens": 4
      },
      "total_tokens": 52
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 40,
    "output": 8,
    "reasoning": 4
  },
  "warnings": [
    {
      "code": "unsupported_control",
      "message": "this provider protocol does not support max_output_tokens in Codex mode"
    }
  ]
}
