tests/it/wire/snapshots/it__wire__openai_responses__codex_mode_streams_a_complete_call_and_drops_sampling_controls.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Write one sentence.",
            "type": "input_text"
          }
        ],
        "role": "user"
      }
    ],
    "instructions": "",
    "metadata": {
      "tenant": "acme"
    },
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": true
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "241"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/responses"
}
