tests/it/wire/snapshots/it__wire__openai_responses__decodes_inclusive_usage_into_disjoint_buckets.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "id": "resp_usage",
  "model": {
    "provider": "openai",
    "model": "gpt-5.6-luna"
  },
  "content": [],
  "finish_reason": "stop",
  "usage": {
    "input": 20,
    "output": 30,
    "reasoning": 20,
    "cache_read": 80,
    "cache_write": 0
  },
  "raw": {
    "id": "resp_usage",
    "model": "gpt-5.6-luna-2026-04-01",
    "object": "response",
    "output": [],
    "status": "completed",
    "usage": {
      "input_tokens": 100,
      "input_tokens_details": {
        "cached_tokens": 80
      },
      "output_tokens": 50,
      "output_tokens_details": {
        "reasoning_tokens": 20
      },
      "total_tokens": 150
    }
  }
}
